Table game_version {
  game_version_id int [increment, note: 'Primary key']
  name text [not null, note: "The name of the game, e.g. 'Mario Kart 8 Deluxe'"]
  short_name text [note: "Short name of the game, used for coding purposes, eg. 'mk8'"]

  Indexes {
    (game_version_id) [pk, name: "pk_game_version"]
  }

  Note: "Stores the Mario Kart versions that are available in the app"
}

Table character {
  character_id int [increment, note: "Primary key"]
  name text [not null, note: "The name of the character"]
  game_version_id int [not null, note: "The game version in which this character appears. Needed for filtering which options are available"]

  Indexes {
    (character_id) [pk, name: "pk_character"]
    (game_version_id, name) [unique, name: "nk_character", note: "The same character may appear in multiple games, so a unique constraint including the game version is necessary"]
  }

  Note: "Stores the characters that may be selected by the player during session setup."
}

Ref character_in_game_version: character.game_version_id > game_version.game_version_id

Table engine_class as cc {
  engine_class_id int [increment, note: "Primary key"]
  name text [not null, note: "The name of the engine class (50cc, 100cc, etc.)"]
  game_version_id int [not null, note: "The game version in which this engine class appears. Needed for filtering which options are available"]

  Indexes {
    (engine_class_id) [pk, name: "pk_engine_class"]
    (game_version_id, name) [unique, name: "nk_engine_class", note: "The same engine class may appear in multiple games, so a unique constraint including the game version is necessary. Conversely, a given engine class may not appear in a given game."]
  }

  Note: "Stores the engine classes that may be selected by the player during session setup."
}

Ref engine_class_in_game_version: engine_class.game_version_id > game_version.game_version_id

Table vehicle_option as vo {
  vehicle_option_id int [increment, note: "Primary key"]
  name text [not null, note: "The name of the CPU vehicle option regime"]
  game_version_id int [not null, note: "The game version in which this vehicle option regime applies"]

  Indexes {
    (vehicle_option_id) [pk, name: "pk_vehicle_option"]
    (game_version_id, name) [unique, name: "nk_vehicle_option", note: "At time of creation, vehicle options only apply to Mario Kart 8, but to ensure flexibility, we include game version in the natural key."]
  }

  Note: "Stores the options for vehicle types of the CPU players. Only applies to Mario Kart 8 Deluxe"
}

Ref fk_vehicle_option_in_game_version: vo.game_version_id > game_version.game_version_id

Table vehicle {
  vehicle_id int [increment, note: "Primary key"]
  name text [not null, note: "The name of the vehicle"]
  game_version_id int [not null, note: "The game in which the vehicle appears"]

  Indexes {
    (vehicle_id) [pk, name: "pk_vehicle"]
    (game_version_id, name) [unique, name: "nk_vehicle", note: "The same vehicle name may appear in multiple games, so a unique constraint including the game version is necessary"]
  }

  Note: "Stores the names of vehicles that may be selected by the player during session setup."
}

Ref vehicle_in_game_version: vehicle.game_version_id > game_version.game_version_id

Table wheel {
  wheel_id int [not null, note: "Primary key"]
  name text [not null, note: "The name of the wheels"] 
  game_version_id int [not null, note: "The game version that this wheel is in."]

  Indexes {
    (wheel_id) [pk, name: "pk_wheel"]
    (name) [unique, name: "nk_wheel", note: "The same wheel name may not appear more than once, so a unique constraint is necessary on the name"]
  }

  Note: '''Stores the names of various wheel options that may be selected by the player during session setup.
  
  This only applies to MK 8, but to allow for future expansion we will include the game version'''
}

Ref fk_wheel_in_game_version: wheel.game_version_id > game_version.game_version_id

Table glider {
  glider_id int [not null, note: "Primary key"]
  name text [not null, note: "The name of the glider"]
  game_version_id int [not null, note: "The game version that this glider is in."]

  Indexes {
    (glider_id) [pk, name: "pk_glider"]
    (name) [unique, name: "nk_glider", note: "The same glider name may not appear more than once, so a unique constraint is necessary on the name"]
  }

  Note: '''Stores the names of various glider options that may be selected by the player during session setup
  
  This only applies to MK 8, but to allow for future expansion we will include the game version'''
}

Ref fk_glider_in_game_version: glider.game_version_id > game_version.game_version_id

Table course_selection {
    course_selection_id int [increment, note: "Primary key"]
    name text [not null, note: "The name of the course selection regime"]
    game_version_id int [not null, note: "The game version to which this regime applies. Needed for filtering."]

    Indexes {
        (course_selection_id) [pk, name: "pk_course_selection"]
        (name, game_version_id) [unique, name: "nk_course_selection", note: "The same course selection regime may appear in multiple games, so a unique constraint including the game version is necessary."]
    }

    Note: "Stores the course selection regimes that are available during session setup"
}

Ref fk_course_selecion_for_game_version: course_selection.game_version_id > game_version.game_version_id

Table item_rule {
  item_rule_id int [increment, note: "Primary key"]
  name text [not null, note: "Name of the item rule set"]
  game_version_id int [not null, note: "The game version to which the rule set applies. Needed for filtering"]

  Indexes {
    (item_rule_id) [pk, name: "pk_item_rule"]
    (name, game_version_id) [unique, name: "nk_item_rule", note: "The same item rule set may appear in multiple games, so a unique constraint including the game version is needed."]
  }

  Note: "Stores the item rule sets that are available during session setup. May include \"custom\", but doesn't specify which items are included."
}

Ref fk_item_rule_for_game_version: item_rule.game_version_id > game_version.game_version_id

Table cpu_difficulty {
    cpu_difficulty_id int [increment, note: "Primary key"]
    name text [not null, note: "The name of the cpu difficulty level"]
    game_version_id int [not null, note: "The game version to which this difficulty level applies. Needed for filtering."]

    Indexes {
        (cpu_difficulty_id) [pk, name: "pk_cpu_difficulty"]
        (name, game_version_id) [unique, name: "nk_cpu_difficulty", note: "The same cpu difficulty level may appear in multiple games, so a unique constraint including the game version is necessary."]
    }

    Note: "Stores the cpu difficulty levels that are available during session setup"
}

Ref fk_difficulty_for_game_version: cpu_difficulty.game_version_id > game_version.game_version_id

Table session {
  session_id int [increment, note: "Primary key"]
  no_players int [not null, note: "The number of players that will be in this session"]
  game_version_id int [not null, note: "The Mario Kart version that was played during this session"]
  play_date timestamptz [not null, note: "The date-time at which the session was played"]
  is_complete bool [default: `false`, note: "Whether the session was completed. False indicates either that the session is not finished or was finished early. Defaults to `false` then updated on completion"]
  no_races int [not null, note: "The number of races that were selected to be played in the session (regardless of how many were actually completed)"]
  engine_class_id int [not null, note: "The engine class selected for the session."]
  teams int [not null, note: "How many teams of racers were selected for this session. 0 indicates no teams."]
  item_rule_id int [not null, note: "The selected item rules for this session."]
  cpu_difficulty_id int [not null, note: "The CPU difficulty level selected for this session."]
  vehicle_option_id int [note: "The types of vehicles that may be used by the CPU for this session. Applies to MK 8 Deluxe only."]
  course_selection_id int [not null, note: "The course selection regime selected for this session."]
  image_name text [note: "The name of the image file showing the selections made"] 

  Indexes {
    (session_id) [pk, name: "pk_session"]
  }

  Note: '''The settings for a single VS Race session of Mario Kart. Not all settings apply to every version of the game. Does not apply to other race types (e.g. Grand Prix).

  Assumes that a session is incomplete until updated, and that a session only takes place on a single calendar day.'''
}

Ref fk_session_of_game_version: session.game_version_id > game_version.game_version_id
Ref fk_cc_of_session: session.engine_class_id > cc.engine_class_id
Ref fk_course_selection_of_session: session.course_selection_id > course_selection.course_selection_id
Ref fk_item_rule_of_session: session.item_rule_id > item_rule.item_rule_id
Ref fk_cpu_difficulty_of_session: session.cpu_difficulty_id > cpu_difficulty.cpu_difficulty_id
Ref fk_vehicle_option_of_session: session.vehicle_option_id > vo.vehicle_option_id

Table player {
  player_id int [increment, note: "Primary key"]
  name text [not null, note: "Name of the player"]

  Indexes {
    (player_id) [pk, name: "pk_player"]
    (name) [unique, name: "nk_player", note: "To avoid difficulties with duplicate names, we have a unique constraint on the name. Given the small scope of the database, this seems sufficient."] 
  }

  Note: '''Stores the names of players for whom to store results.'''
}

Table player_default {
  player_default_id int [increment, note: "Primary key"]
  player_id int [not null, note: "The player to whom this default setup applies"]
  game_version_id int [not null, note: "The game version to which this default setup applies"]
  character_id int [note: "The character seleted for the default setup"]
  vehicle_id int [note: "The vehicle selected for the default setup"]
  wheel_id int [note: "The wheels selected for the default setup. MK 8 Deluxe only"]
  glider_id int [note: "The glider selected for the default setup. MK 8 Deluxe only"]

  Indexes {
    (player_default_id) [pk, name: "pk_player_default"]
    (player_id, game_version_id) [unique, name: "nk_player_default"]
  }

  Note: '''Favourite setups for a player. A player may have a single favourite setup for each version of Mario Kart. They do not have to make a selection for each option.'''
}

Ref fk_player_default_for_player: player_default.player_id > player.player_id
Ref fk_player_default_for_game_version: player_default.game_version_id > game_version.game_version_id
Ref fk_character_selected_for_player_default: player_default.character_id > character.character_id
Ref fk_vehicle_selected_for_player_default: player_default.vehicle_id > vehicle.vehicle_id
Ref fk_wheel_selected_for_player_default: player_default.wheel_id > wheel.wheel_id
Ref fk_glider_selected_for_player_default: player_default.glider_id > glider.glider_id

Table player_session {
  player_session_id int [increment, note: "Primary key"]
  session_id int [not null, note: "The session to which this setup applies."]
  player_id int [not null, note: "The player to which this setup applies."]
  character_id int [not null, note: "The character selected by the player in this session."]
  vehicle_id int [not null, note: "The vehicle selected by the player in this session."]
  wheel_id int [note: "The wheels selected by the player for this session. MK 8 only."]
  glider_id int [note: "The glider selected by the player for this session. MK 8 only."]

  Indexes {
    (player_session_id) [pk, name: "pk_player_session"]
    (session_id, player_id) [unique, name: "nk_player_session", note: "To prevent multiple player setups being entered for the same session for the same player, a unique constraint on both the player and session is required."]
  }

  Note: '''Selections made by a player during session setup. Selections from the `player_default` table will be re-entered, rather than inserting a reference.'''
}

Ref fk_player_in_player_session: player_session.player_id > player.player_id
Ref fk_session_in_player_session: player_session.session_id > session.session_id
Ref fk_character_selected_for_player_session: player_session.character_id > character.character_id
Ref fk_vehicle_selected_for_player_session: player_session.vehicle_id > vehicle.vehicle_id
Ref fk_wheel_selected_for_player_session: player_session.wheel_id > wheel.wheel_id
Ref fk_glider_selected_for_player_session: player_session.glider_id > glider.glider_id

Table track {
  track_id int [increment, note: "Primary key"]
  name text [not null, note: "The name of the track"]
  game_version_id int [not null, note: "The game version containing this track. Used for filtering."]

  Indexes {
    (track_id) [pk, name: "pk_track"]
    (name, game_version_id) [unique, name: "nk_track", note: "As the same track name may appear in multiple game versions, a unique constraint on both the track name and game version is required."]
  }

  Note: "Stores the names of tracks to be played during a session."
}

Ref fk_track_in_game_version: track.game_version_id > game_version.game_version_id

Table race {
  race_id int [increment, note: "Primary key"]
  session_id int [not null, note: "The session of which the race is a part"]
  race_no int [not null, note: "The race number within the session"]
  start_track_id int [not null, note: "The starting track of the race (MK World) or the track on which the race is done (MK 8)"]
  end_track_id int [note: "The ending track of the race. MK World only."]

  Indexes {
    (race_id) [pk, name: "pk_race"]
    (session_id, race_no) [unique, name: "nk_race"]
  }

  Note: '''Stores the details of each race within a session. 
  
  For Mario Kart 8, only `start_track_id` should be completed. For Mario Kart World, `end_track_id` may be null (indicates that it was a single-track race).'''
}

Ref fk_race_in_session: race.session_id > session.session_id
Ref fk_start_race_on_track: race.start_track_id > track.track_id
Ref fk_end_race_on_track: race.end_track_id > track.track_id

Table position {
  position_id int [increment, note: "Primary key"]
  game_version_id int [not null, note: "The version of the game to which this result applies"]
  position int [not null, note: "The ordinal position"]
  points int [not null, note: "The number of points received from this position"]

  Indexes {
    (position_id) [pk, name: "pk_position"]
    (game_version_id, position) [unique, name: "nk_position", note: "Since different positions are worth different point values in different games, a unique constraint on the game version and the position is required"]
  }

  Note: '''Stores the scores allocated to each position for each version of the game.'''
}

Ref position_for_game_version: position.game_version_id > game_version.game_version_id

Table race_result {
  race_result_id int [increment, note: "Primary key"]
  race_id int [not null, note: "The race for which this result is for"]
  player_session_id int [not null, note: "The player-session for which this result is for"]
  position_id int [not null, note: "The position in which the player finished."]
  
  Indexes {
    (race_result_id) [pk, name: "pk_race_result"]
    (race_id, player_session_id) [unique, name: "nk_race_result", note: "A player can only have one result per race, so a unique constraint on both race and player is required."]
    (race_id, position_id) [unique, name: "uq_race_position", note: "Constraint to ensure two players can't have the same position"]
  }

  Note: '''Stores the results of races for each player. Given that positions are tied to points, a foreign key relationship is required.'''
}

Ref fk_race_result_for_race: race_result.race_id > race.race_id
Ref fk_race_result_for_player: race_result.player_session_id > player_session.player_session_id
Ref fk_position_for_race_result: race_result.position_id > position.position_id